fix alignment issues

--- a/public/style.css
+++ b/public/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .current-weather-wrapper {
-    font-size: 80px;
+    font-size: 75px;
     text-align: left;
 }
 
